--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/heba/.netbeans/8.0.2/build.properties
+user.properties.file=/Users/hebatarek/Library/Application Support/NetBeans/8.2/build.properties
